--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             background-color: #fff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            position: relative;
         }
 
         table {
@@ -92,6 +93,40 @@
             color: #FF0000;
             margin-top: 20px;
         }
+
+        .haha {
+            text-align: center;
+            font-size: 1.2em;
+            color: blue;
+            margin-top: 20px;
+        }
+
+        @keyframes rotate {
+            from {
+                transform: rotate(0deg);
+            }
+
+            to {
+                transform: rotate(5000deg);
+            }
+        }
+
+        .rotate-image {
+            position: absolute;
+            width: 300px;
+            height: 250px;
+            animation: rotate 10s linear infinite;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+
+        .left-image {
+            left: -400px;
+        }
+
+        .right-image {
+            right: -400px;
+        }
     </style>
 </head>
 
@@ -119,6 +154,9 @@
         </div>
 
         <div class="warning-text">그냥 공부하지 마</div>
+        <div class="haha">하긴해야해</div>
+        <img src="image.png" alt="image" class="rotate-image left-image">
+        <img src="image2.jpg" alt="image" class="rotate-image right-image">
     </div>
 </body>
 
